--- a/cchat.xcodeproj/xcshareddata/xcschemes/cchat.xcscheme
+++ b/cchat.xcodeproj/xcshareddata/xcschemes/cchat.xcscheme
@@ -10,7 +10,7 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "if which swiftlint &gt;/dev/null; then&#10;  swiftlint&#10;else&#10;  echo &quot;warning: SwiftLint not installed, download from https://github.com/realm/SwiftLint&quot;&#10;fi&#10;">
+               scriptText = "cd &quot;${PROJECT_DIR}&quot;&#10;./prebuild.sh&#10;">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
